# me-tube

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.dev.yml  docker-compose.yml  layout.kdl
backend/: .gitignore  Cargo.toml  Dockerfile
backend/src/: authentication.rs  config.rs  cors.rs  db.rs  game.rs  lib.rs  like.rs  main.rs  media.rs  response.rs  user.rs  video.rs
backend/src/video/: file.rs  mod.rs  share.rs  token.rs
frontend/: .gitignore  pubspec.yaml
frontend/lib/: api.dart  auth.dart  home.dart  login.dart  main.dart  multipart.dart  password_reset.dart  upload.dart  users_screen.dart  video_screen.dart
frontend/lib/data/: authentication.dart
frontend/macos/Flutter/: GeneratedPluginRegistrant.swift
frontend/test/: widget_test.dart
frontend/web/: index.html
import/: .gitignore  import.py  requirements.txt
nginx/: main.conf  proxy_params
nginx.dev/: main.conf
src/: authentication.rs  db.rs  main.rs
