[package]
name = "me-tube"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = "0.4.39"
lazy_static = "1.5.0"
log = "0.4.25"
rand = "0.8.5"
rocket = { version = "0.5.1", features = ["json", "secrets"] }
rocket_db_pools = { version = "0.2.0", features = ["mongodb"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_with = { version = "3.12.0", features = ["chrono"] }
toml = "0.8.19"
