[package]
name = "me-tube"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = "0.4.39"
clap = { version = "4.5.30", features = ["derive"] }
lazy_static = "1.5.0"
log = "0.4.25"
rand = "0.8.5"
rocket = { version = "0.5.1", features = ["json", "secrets"] }
rocket_db_pools = { version = "0.2.0", features = ["mongodb"] }
rpassword = "7.3.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_with = { version = "3.12.0", features = ["chrono"] }
sha1 = "0.10.6"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.19"

[[bin]]
name = "me-tube"
path = "src/bin/main.rs"

[[bin]]
name = "me-tube-admin"
path = "src/bin/admin.rs"

